--- a/grid.css
+++ b/grid.css
@@ -7,15 +7,26 @@
 /* grids container - wrap your grids within */
 .grids {
 	overflow: hidden;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 /* grids */
-.g1of2 { float: left; width: 50%; }
-.g1of3 { float: left; width: 33.33%; }
-.g1of4 { float: left; width: 25%; }
-.g1of5 { float: left; width: 20%; }
-.g2of3 { float: left; width: 66.66%; }
-.g2of5 { float: left; width: 40%; }
-.g3of4 { float: left; width: 75%; }
-.g3of5 { float: left; width: 60%; }
-.g4of5 { float: left; width: 80%; }
+
+.g1of2, .g1of3, .g1of4, .g1of5,
+.g2of3, .g2of5,
+.g3of4, .g3of5,
+.g4of5	{ float: left; display: inline; }
+
+.g1of2	{ width: 50%; }
+.g1of3	{ width: 33.33%; }
+.g1of4	{ width: 25%; }
+.g1of5	{ width: 20%; }
+
+.g2of3	{ width: 66.66%; }
+.g2of5	{ width: 40%; }
+
+.g3of4	{ width: 75%; }
+.g3of5	{ width: 60%; }
+
+.g4of5	{ width: 80%; }
