--- a/grid.css
+++ b/grid.css
@@ -7,25 +7,21 @@
  */
  
 /* grids container - wrap your grids within */
-.grids {
-	overflow: hidden;
-	margin-right: auto;
-	margin-left: auto;
-}
+.grids { overflow: hidden; }
 
 /* grids */
 
 .g1of2, .g1of3, .g1of4, .g1of5,
 .g2of3, .g2of5,
 .g3of4, .g3of5,
-.g4of5	{ float: left; display: inline; }
+.g4of5	{ float: left; }
 
 .g1of2	{ width: 50%; }
-.g1of3	{ width: 33.33%; }
+.g1of3	{ width: 33.333333333%; }
 .g1of4	{ width: 25%; }
 .g1of5	{ width: 20%; }
 
-.g2of3	{ width: 66.66%; }
+.g2of3	{ width: 66.666666666%; }
 .g2of5	{ width: 40%; }
 
 .g3of4	{ width: 75%; }
