Moved to Micro Clearfix instead of the Overflow hack for a better wrapper for grids.

--- a/grid.css
+++ b/grid.css
@@ -7,7 +7,10 @@
  */
  
 /* grids container - wrap your grids within */
-.grids { overflow: hidden; }
+.grids			{ zoom: 1; }
+.grids:before,
+.grids:after	{ display: table; *display: inline; content: ""; zoom: 1; }
+.grids:after	{ clear: both; }
 
 /* grids */
 
