Github Page misplacement.

--- a/grid.css
+++ b/grid.css
@@ -1,7 +1,10 @@
 /*
  * Grid
  * A simple, flexible, fluid grid system that can flow nicely inside a fluid or a fixed container or play good with another Grid system.
- * Brajeshwar, http://brajeshwar.com
+ * 
+ * Brajeshwar
+ * http://brajeshwar.com
+ * Follow @Brajeshwar on Twitter
  *
  * Demo & Details: http://brajeshwar.github.com/grid/
  */
