--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,20 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>{{ page.title }}</title>
 <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="/styles/grid.css">
-<link rel="stylesheet" href="/styles/style.css">
+<link rel="stylesheet" href="styles/grid.css">
+<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 
+<header>
+
+</header>
+
 {{ content }}
+
+<footer>
+
+</footer>
 
 </body>
 </html>
